@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-10T01:37:33Z",
-  "count_outdated" : 288,
-  "uniques_outdated" : 175,
+  "timestamp" : "2022-08-10T16:26:12Z",
+  "count_outdated" : 289,
+  "uniques_outdated" : 176,
   "count" : 295,
   "uniques" : 181,
   "clones" : [
-    {
-      "timestamp": "2022-07-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-03T00:00:00Z",
       "count": 1,
