@@ -1,12 +1,7 @@
 {
-  "count": 7,
+  "count": 6,
   "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2022-07-27T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-08-03T00:00:00Z",
       "count": 1,
